--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
@@ -20,7 +20,7 @@
        "'2.2.2'"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 100,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
@@ -50,7 +50,7 @@
        " 'height': [160, 162, 165, 168, 172, 174, 174, 174, 176]}"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 102,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [
     {
@@ -161,7 +161,7 @@
        "8   80     176"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 104,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [
     {
@@ -195,7 +195,7 @@
        "np.float64(41.77777777777778)"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 105,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [
     {
@@ -216,7 +216,7 @@
        "np.float64(40.0)"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 106,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
@@ -238,7 +238,7 @@
        "Name: age, dtype: int64"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 107,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
@@ -260,7 +260,7 @@
        "Name: height, dtype: int64"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 108,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -268,6 +268,97 @@
    "source": [
     "# mode\n",
     "df_measures[\"height\"].mode()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Medidas de Dispersão"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(509.94444444444446)"
+      ]
+     },
+     "execution_count": 109,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# variancia\n",
+    "df_measures.age.var()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(22.58194952709895)"
+      ]
+     },
+     "execution_count": 110,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# desvio padrao\n",
+    "df_measures.age.std()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(54.05253876167302)"
+      ]
+     },
+     "execution_count": 111,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# coeficiente de variação\n",
+    "df_measures.age.std() / df_measures.age.mean() * 100"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(3.4803552812368785)"
+      ]
+     },
+     "execution_count": 112,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# coeficiente de variação\n",
+    "df_measures.height.std() / df_measures.height.mean() * 100"
    ]
   }
  ],
