--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
@@ -20,7 +20,7 @@
        "'2.2.2'"
       ]
      },
-     "execution_count": 100,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
@@ -50,7 +50,7 @@
        " 'height': [160, 162, 165, 168, 172, 174, 174, 174, 176]}"
       ]
      },
-     "execution_count": 102,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -161,7 +161,7 @@
        "8   80     176"
       ]
      },
-     "execution_count": 104,
+     "execution_count": 92,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
@@ -195,7 +195,7 @@
        "np.float64(41.77777777777778)"
       ]
      },
-     "execution_count": 105,
+     "execution_count": 93,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
@@ -216,7 +216,7 @@
        "np.float64(40.0)"
       ]
      },
-     "execution_count": 106,
+     "execution_count": 94,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
@@ -238,7 +238,7 @@
        "Name: age, dtype: int64"
       ]
      },
-     "execution_count": 107,
+     "execution_count": 95,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
@@ -260,7 +260,7 @@
        "Name: height, dtype: int64"
       ]
      },
-     "execution_count": 108,
+     "execution_count": 96,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
@@ -288,7 +288,7 @@
        "np.float64(509.94444444444446)"
       ]
      },
-     "execution_count": 109,
+     "execution_count": 97,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -300,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
@@ -309,7 +309,7 @@
        "np.float64(22.58194952709895)"
       ]
      },
-     "execution_count": 110,
+     "execution_count": 98,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -321,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
@@ -330,7 +330,7 @@
        "np.float64(54.05253876167302)"
       ]
      },
-     "execution_count": 111,
+     "execution_count": 99,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -342,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
@@ -351,7 +351,7 @@
        "np.float64(3.4803552812368785)"
       ]
      },
-     "execution_count": 112,
+     "execution_count": 100,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -359,6 +359,126 @@
    "source": [
     "# coeficiente de variação\n",
     "df_measures.height.std() / df_measures.height.mean() * 100"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Medidas de Forma"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(0.368108517895537)"
+      ]
+     },
+     "execution_count": 101,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Assimetria - Idade\n",
+    "df_measures.age.skew()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(-0.598486996170113)"
+      ]
+     },
+     "execution_count": 102,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Assimetria - Altura\n",
+    "df_measures.height.skew()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(-1.1344461075421046)"
+      ]
+     },
+     "execution_count": 103,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Curtose - Idade\n",
+    "df_measures.age.kurtosis()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(-1.3372641199913002)"
+      ]
+     },
+     "execution_count": 104,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Curtose - Altura\n",
+    "df_measures.height.kurtosis()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "count     9.000000\n",
+       "mean     41.777778\n",
+       "std      22.581950\n",
+       "min      15.000000\n",
+       "25%      25.000000\n",
+       "50%      40.000000\n",
+       "75%      58.000000\n",
+       "max      80.000000\n",
+       "Name: age, dtype: float64"
+      ]
+     },
+     "execution_count": 105,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Get measures\n",
+    "df_measures.age.describe()"
    ]
   }
  ],
