--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
@@ -20,7 +20,7 @@
        "'2.2.2'"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 107,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [
     {
@@ -50,7 +50,7 @@
        " 'height': [160, 162, 165, 168, 172, 174, 174, 174, 176]}"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 109,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [
     {
@@ -161,7 +161,7 @@
        "8   80     176"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 111,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [
     {
@@ -195,7 +195,7 @@
        "np.float64(41.77777777777778)"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 112,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [
     {
@@ -216,7 +216,7 @@
        "np.float64(40.0)"
       ]
      },
-     "execution_count": 94,
+     "execution_count": 113,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [
     {
@@ -238,7 +238,7 @@
        "Name: age, dtype: int64"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 114,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [
     {
@@ -260,7 +260,7 @@
        "Name: height, dtype: int64"
       ]
      },
-     "execution_count": 96,
+     "execution_count": 115,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [
     {
@@ -288,7 +288,7 @@
        "np.float64(509.94444444444446)"
       ]
      },
-     "execution_count": 97,
+     "execution_count": 116,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -300,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [
     {
@@ -309,7 +309,7 @@
        "np.float64(22.58194952709895)"
       ]
      },
-     "execution_count": 98,
+     "execution_count": 117,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -321,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [
     {
@@ -330,7 +330,7 @@
        "np.float64(54.05253876167302)"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 118,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -342,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [
     {
@@ -351,7 +351,7 @@
        "np.float64(3.4803552812368785)"
       ]
      },
-     "execution_count": 100,
+     "execution_count": 119,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -370,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [
     {
@@ -379,7 +379,7 @@
        "np.float64(0.368108517895537)"
       ]
      },
-     "execution_count": 101,
+     "execution_count": 120,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -391,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [
     {
@@ -400,7 +400,7 @@
        "np.float64(-0.598486996170113)"
       ]
      },
-     "execution_count": 102,
+     "execution_count": 121,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -412,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [
     {
@@ -421,7 +421,7 @@
        "np.float64(-1.1344461075421046)"
       ]
      },
-     "execution_count": 103,
+     "execution_count": 122,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -433,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [
     {
@@ -442,7 +442,7 @@
        "np.float64(-1.3372641199913002)"
       ]
      },
-     "execution_count": 104,
+     "execution_count": 123,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -454,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [
     {
@@ -471,7 +471,7 @@
        "Name: age, dtype: float64"
       ]
      },
-     "execution_count": 105,
+     "execution_count": 124,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -479,6 +479,156 @@
    "source": [
     "# Get measures\n",
     "df_measures.age.describe()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Correlação de Variáveis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>age</th>\n",
+       "      <th>height</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>age</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.931024</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>height</th>\n",
+       "      <td>0.931024</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             age    height\n",
+       "age     1.000000  0.931024\n",
+       "height  0.931024  1.000000"
+      ]
+     },
+     "execution_count": 125,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Correlação do DataFrame, segundo Pearson\n",
+    "df_measures.corr(method='pearson')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 126,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(0.9310236045054339)"
+      ]
+     },
+     "execution_count": 126,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Correlação entre 2 variáveis\n",
+    "df_measures.age.corr(df_measures.height)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 127,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>age</th>\n",
+       "      <th>height</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>age</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.978803</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>height</th>\n",
+       "      <td>0.978803</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             age    height\n",
+       "age     1.000000  0.978803\n",
+       "height  0.978803  1.000000"
+      ]
+     },
+     "execution_count": 127,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Correlação do DataFrame, segundo Spearman\n",
+    "df_measures.corr(method='spearman')"
    ]
   }
  ],
